updated at: 2023-08-03 16:59, fbxモデル 片手剣/両刃剣「Slicer」 - Store*Snowlight - BOOTH

--- a/VRChat/15/1084815.html
+++ b/VRChat/15/1084815.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "KQmHo5DxHlHFat4w7BwIF2iVSeg7euZ37trRZl2qrE8="></script>
+    "G8NS4i4iEgomVx6eSVSphj5W6llxhhxMgPX/2D3klpM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"fbxモデル 片手剣/両刃剣「Slicer」","description":"English explanation is at the bottom of this page.\n\n本製品は、fbx形式の3D武器モデルです。\nUnityでの利用を想定しておりますが、Blender等にインポートすることで別形式に変換することも可能です。\n\nテクスチャを2種類同梱しています。お好みで使い分けてください。\n動画の動きは、アニメーションオーバーライド(ハンドサイン)による表示状態の切り替えで行っています。","url":"https://booth.pm/ja/items/1084815","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/bb487ead-0245-44f1-9e26-22a99b59aed0/i/1084815/daab2743-b93d-4e98-a74b-d2f3f230ed07_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KQmHo5DxHlHFat4w7BwIF2iVSeg7euZ37trRZl2qrE8="></script>
+    nonce="G8NS4i4iEgomVx6eSVSphj5W6llxhhxMgPX/2D3klpM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -179,7 +179,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               fbxモデル 片手剣/両刃剣「Slicer」
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -215,6 +215,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -335,9 +337,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
