--- a/VRChat/01/1084501.html
+++ b/VRChat/01/1084501.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "NixWyp6FI9lz8/5IJvbhNEFFh6RjAJ8Xnvpn4+29VyQ="></script>
+    "uDY461zSfHSl5rCQcP+K+iWnSTDuvMJnXcRlTufdXWE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(無料)VRC用SS写真立て","description":"VRCHAT内にあるカメラで撮ったものに対応した写真立てです\n\nこちらは無料で配布いたします\nあの人との思いで。集合写真などにいかがでしょうか？\n\nもちろん大きさを変えて壁に張れば額縁にもなります\n※支援　無料　両方とも中に入っているものは変わりません","url":"https://booth.pm/ja/items/1084501","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1084501/65994eed-caf9-46a8-a2bd-373e190a8aa5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="NixWyp6FI9lz8/5IJvbhNEFFh6RjAJ8Xnvpn4+29VyQ="></script>
+    nonce="uDY461zSfHSl5rCQcP+K+iWnSTDuvMJnXcRlTufdXWE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -154,7 +154,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               (無料)VRC用SS写真立て
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -190,6 +190,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
