--- a/VRChat/88/1084488.html
+++ b/VRChat/88/1084488.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "i0Lde6gUsu09plI1f/SRAqohR151Lp1PHEYaTDqEqyE="></script>
+    "jkCwm1O39eqs9NLc91uLrxUfnX+vb14UzM1SUdb+pZA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Machine Tail","description":"今回はすこし前に尻尾のアクセサリーを作りましたので\n出来がなかなか良かったので販売することとなりました。\n\nポリ数1884\nと少しポリゴンが必要になりますが使っていただけるとありがたいです。","url":"https://booth.pm/ja/items/1084488","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/1d14c665-3ae2-443e-9d88-4fc1502813e4/i/1084488/37cc8145-66e3-4e1a-99cc-b48f1391802f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="i0Lde6gUsu09plI1f/SRAqohR151Lp1PHEYaTDqEqyE="></script>
+    nonce="jkCwm1O39eqs9NLc91uLrxUfnX+vb14UzM1SUdb+pZA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -154,7 +154,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               Machine Tail
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -190,6 +190,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
