--- a/VRChat/48/1084048.html
+++ b/VRChat/48/1084048.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "bPUtmIdM4/9DMdGNLiAfoyaLt9MJkks6zQhbmbnUDvQ="></script>
+    "dxKvZg7lCnIf4rznz0FgrSzOjw0ChVaGl29xWvA/zfc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ArmoredPack02 Ver1.0","description":"DDW-007-S　制式長刀　開発コード「Cynabal」\nDDD-010　汎用アーム \nDDW-011-B　電磁砲　開発コード「Naglfar」\nDDW-012-G　6連ガトリング　開発コード「Abaddon」\nDDD-013 ポット式無線砲台「PotBit」\nを提供します","url":"https://booth.pm/ja/items/1084048","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1084048/98bff4e9-e218-4964-8b18-158cfce985db_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bPUtmIdM4/9DMdGNLiAfoyaLt9MJkks6zQhbmbnUDvQ="></script>
+    nonce="dxKvZg7lCnIf4rznz0FgrSzOjw0ChVaGl29xWvA/zfc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ArmoredPack02 Ver1.0
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
