updated at: 2023-08-03 17:00, X&#39;masセット - bisy`s shop - BOOTH

--- a/VRChat/67/1083767.html
+++ b/VRChat/67/1083767.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "YDLk0cbaQ6xHcoRvw9u557jp7PzkwUsntmbu1n56wZQ="></script>
+    "EIg3hu6OfIgRkK9lMQbxEEWbgY/OZ5h3seG52XABQ0w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"X'masセット","description":"クリスマス用アイテムのセットです。\nUnityパッケージとblendモデルが入っています。\n内容物\n・モミの木\n・クリスマスツリー\n・サンタ帽(ボーン入り)\n・プレゼント2種\n・雪だるま\nサンタ帽はポージング及びダイナミックボーン用のボーンが入っています。\n\n改変はご自由に行って大丈夫です。\n再配布は禁止させていただきます。","url":"https://booth.pm/ja/items/1083767","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/952c1078-6805-447e-8b8e-e44f2166d1fd/i/1083767/fd0be4a0-66d5-433a-a3eb-b3a8ba645632_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="YDLk0cbaQ6xHcoRvw9u557jp7PzkwUsntmbu1n56wZQ="></script>
+    nonce="EIg3hu6OfIgRkK9lMQbxEEWbgY/OZ5h3seG52XABQ0w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -154,7 +154,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               X'masセット
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -190,6 +190,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -299,9 +301,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
