--- a/VRChat/62/1083562.html
+++ b/VRChat/62/1083562.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "t0Kcv6tsZsL17vht5qgSS5L+DB6n64GA5OHpP5YbiOE="></script>
+    "n0GdVpmWHn04OQF32XOYBX5ev0e+KIhjKCbexvxfF2s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】ビームチェーンソー","description":"ご購入されてVRChatで使用された方は、twitterで@tuneken_workにスクショを送っていただけると作者が喜びます！\n\n【商品説明】\nアニメーション付きのチェーンソーです。\nアニメーションの速度はコントローラーにて調整可能なので、お好みの速さで回転させてください。\n\n2032ポリゴン\nテクスチャ1024px\n\n【含まれる物】\nUnitypackage\n -武器モデル本体のFBX\n -武器モデル本体のPrefab\n -カラーマップ\n -エミッションマップ\n -スペキュラマップ\n -アニメーションデータ\n\n\n【使用に関する注意】\n・モデル、テクスチャ、エフェクトの改造・加筆修正は自由です。\n・無償、有償に関わらずデータの再配布はおやめください。\n・VRChatで使用することを想定していますが、Vtuber等の動画コンテンツ、同人ゲーム等での使用も可能です。\n","url":"https://booth.pm/ja/items/1083562","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c43583ad-31e1-4ed9-9a1e-3c3f8648877c/i/1083562/0199ec9a-3d28-4382-85f3-2f5da7246bc7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="t0Kcv6tsZsL17vht5qgSS5L+DB6n64GA5OHpP5YbiOE="></script>
+    nonce="n0GdVpmWHn04OQF32XOYBX5ev0e+KIhjKCbexvxfF2s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【VRChat向け】ビームチェーンソー
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -298,9 +300,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
