updated at: 2023-08-03 17:00, どこかで見たような蒼い剣 - アリスの落とし子直売所 - BOOTH

--- a/VRChat/50/1083250.html
+++ b/VRChat/50/1083250.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "L+LkFIx+ZplqdVLXIfpH53UKI0M/SBOSlPGxx51pJ5I="></script>
+    "xiQ/arolwaloa3unaChKSDIlonDkVV/ZjNuIELZWpfM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"どこかで見たような蒼い剣","description":"■VRchat等のなんかこう3Dのあれに使える用のどこかで見たような蒼い剣です（巨乳ロリは付属しません）\n\n■ブレンダー初めて5時間で作ったので、ガバが目立ちます\n\n■ポリゴン数：1596\n\n■細かいこと：VRChat推奨　再配布可　改造化　アストラルフィニッシュ可\n\n■禁止事項：自作発言（改造品含む）　商用利用　10割コン\n","url":"https://booth.pm/ja/items/1083250","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/565e6dcd-600c-4884-8a13-2faabbfd8cdf/i/1083250/377c0e67-6deb-4e9d-b377-aceac59f76b0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="L+LkFIx+ZplqdVLXIfpH53UKI0M/SBOSlPGxx51pJ5I="></script>
+    nonce="xiQ/arolwaloa3unaChKSDIlonDkVV/ZjNuIELZWpfM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               どこかで見たような蒼い剣
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -262,9 +264,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
