--- a/VRChat/67/1083167.html
+++ b/VRChat/67/1083167.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "pAaTvRQJNcG/2/Fkur14Qqyn7rRdzyDnIkYqO+d0PAY="></script>
+    "DqSufzShilXfhy5Dd2ymjmVlMqDQOKfPwbtLep5LSeI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け「中華まん」","description":"肌を刺すような寒い冬の日、コンビニの前で湯気を立てながらハフハフ食べられているあれです。\n(モデルに湯気のパーティクルは入っていません)\n\nこの中華まんは主に個人がVRChatでアバターに装着したり、ワールドに置くことを想定しています。\n\nシェイプキーでひと口かじった状態にできます。\n\nポリゴン数は808です。\n\nanのテクスチャに自分の好きな食べ物の写真や絵などを張ることで、自分だけの中華まんを作ることができます。\n\n\nユニティパッケージになっています。","url":"https://booth.pm/ja/items/1083167","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1083167/8b9810ed-3d00-4899-90f5-86230e7a5844_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="pAaTvRQJNcG/2/Fkur14Qqyn7rRdzyDnIkYqO+d0PAY="></script>
+    nonce="DqSufzShilXfhy5Dd2ymjmVlMqDQOKfPwbtLep5LSeI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRChat向け「中華まん」
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -262,9 +264,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
