updated at: 2023-08-03 17:01, 3Dモデル R&amp;B-tec N300G&quot;ハンドキャノン&quot; - 麻婆弾ストア - BOOTH

--- a/VRChat/62/1082662.html
+++ b/VRChat/62/1082662.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "aMHz5MD0CAQP8vka0bmmHgccjiDl5pukmMdNEZIhb+I="></script>
+    "f8TKlkeKiYkIEdtIRgl3mUaL8XzG5ZtPjd+HGDetNho="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3Dモデル R\u0026B-tec N300G\"ハンドキャノン\"","description":"□サイバーパンク風大口径の小型携行火器の3Dモデルです。\n4264△ポリゴン。\n\n\n□内容\n・N300G.fbx　本体\n\n・N300G.unitypackage　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・サムネ類フォルダ　サムネ類画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートしてご利用下さい。\nunitypackageの場合、ファイルはAssets/weapon/N300Gフォルダに作成されます。\n\n\n\n□設定等\n\n R\u0026B-tec N300G\n\n　サイバネティックス要員や戦闘用自律機のバックアップウェポンとして設計された火器。\n12.7x46mm High Express弾を使用し、セミオートでの発砲が可能。\n技術的には目立つ点はなく、ガス圧によるロングストローク・ガスピストンによる安定した動作形式を採用している。\n信頼性の高さは特筆に値する。\n\n\n\n□利用規約\n\n基本的には再配布を禁じます。\n\nVRchat、改変、動画、同人、移植、商用などにどうぞ。\n\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nメール： stanag2324@gmail.com\n\n\n□更新履歴\n\n2018/11/06：販売開始","url":"https://booth.pm/ja/items/1082662","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1082662/e4f6dd53-4a96-46d7-8587-dbef27574b7f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aMHz5MD0CAQP8vka0bmmHgccjiDl5pukmMdNEZIhb+I="></script>
+    nonce="f8TKlkeKiYkIEdtIRgl3mUaL8XzG5ZtPjd+HGDetNho="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -158,7 +158,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               3Dモデル R&amp;B-tec N300G"ハンドキャノン"
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -194,6 +194,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -312,9 +314,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
