--- a/VRChat/80/1082480.html
+++ b/VRChat/80/1082480.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "G+49OkSuATJoeUYE/6NXkcMg4JMYaARIlRYv8+TeTWE="></script>
+    "YpTNozVFHSqOcxRC7ZWWaPTzPp9IyyBIeBQ7xSOIAq0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"（３Dモデル）お寿司","description":"特上寿司です。（▲5,448）\nまぐろ、かんぱち、ひらめ、うに、いくら、あなご、赤貝、さんま、数の子、甘エビ、かんぴょうの巻物、ガリです。\n\nvtuber動画やVRChatその他での賑やかしにご利用ください。\n\n【内容物説明】\nSushi.fbx : モデル本体です。\nSushiTex.png : テクスチャです。\nReadme.txt : 説明書です。\n\n※ 寿司１貫につき１オブジェクトです。\n※ 例外として、イクラは２オブジェクトに別れています。光沢のあるマテリアルを適用してあげてください。\n※ 見本画像でユニティちゃんトゥーンシェーダーを使用しております（１枚目）。\n\n【ご利用について】\n改変：可\n商用利用：可\n作者詐称：不可\n再配布、本データを含めた販売：不可\nVRChatなどで使用するアバターやペデスタル、ワールドへの同梱：可\n\n【免責事項】\nモデル製作者は当モデルデータを利用したことにより発生した損害、損失、その他の不利益に対して一切の責任を負いません。\n\n↓使用例↓","url":"https://booth.pm/ja/items/1082480","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/18b0699d-c344-4832-a9f1-66695f5c053b/i/1082480/cad83410-55ab-415a-b779-47f43ba6817f_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G+49OkSuATJoeUYE/6NXkcMg4JMYaARIlRYv8+TeTWE="></script>
+    nonce="YpTNozVFHSqOcxRC7ZWWaPTzPp9IyyBIeBQ7xSOIAq0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -179,7 +179,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               （３Dモデル）お寿司
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -215,6 +215,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -288,9 +290,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
