updated at: 2023-08-03 17:01, みどきち産業製タクトスイッチ - みどきち産業 - BOOTH

--- a/VRChat/12/1081912.html
+++ b/VRChat/12/1081912.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "07HV+vnT2FlCvxqtqTRtYgHHRI0UaTYlhwShkRLl2pE="></script>
+    "jzqboopZATSafuImPMmp8T0vKAN9Nnr9B4Z4QWOwtLg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"みどきち産業製タクトスイッチ","description":"本製品は気の迷いで作ったタクトスイッチから3Dモデルのみ残した無料版ですが\n製作者本人にも動かせてないのでVRChatで動かせる方は動かしかたを教えてください(切実)\n","url":"https://booth.pm/ja/items/1081912","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/2e89935f-9c79-4183-9024-0c7885265619/i/1081912/e8338d2f-af20-49d9-9e14-d221734e5cf0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="07HV+vnT2FlCvxqtqTRtYgHHRI0UaTYlhwShkRLl2pE="></script>
+    nonce="jzqboopZATSafuImPMmp8T0vKAN9Nnr9B4Z4QWOwtLg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -148,7 +148,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               みどきち産業製タクトスイッチ
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -184,6 +184,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -258,9 +260,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
