--- a/VRChat/61/1081861.html
+++ b/VRChat/61/1081861.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "K2kphwc9LMWypX2PCUZKLaWB9In8SbTrnGVdSDkO9TY="></script>
+    "EgjKKIgBTd9Pm9zPJTinVngUtlrgG9qWYJIGRs42LXw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　もちだいふくアイス","description":"VRchat向けアクセサリ：もちだいふくアイス（もちひよこバージョン）\nポリゴン数4386のFBXファイルと\nテクスチャが入っております\n\n「パッケージ」のメッシュはシェイプキーが入っており、上図のように半分開きます\n\n画像の状態は「Cubeds-Unity-Shaders」を使っています\n\nもちひよこ様に配布の許可をいただいております、悪意のある使用方法はお止めください","url":"https://booth.pm/ja/items/1081861","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1081861/4cfabcbf-2638-4ba2-bf52-76dc52f16d12_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="K2kphwc9LMWypX2PCUZKLaWB9In8SbTrnGVdSDkO9TY="></script>
+    nonce="EgjKKIgBTd9Pm9zPJTinVngUtlrgG9qWYJIGRs42LXw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRChat向け　もちだいふくアイス
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      441
+                                      442
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,10 +185,12 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      441
+                                      442
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -262,9 +264,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
