updated at: 2023-08-03 17:03, スキットル - 潮だまり - BOOTH

--- a/VRChat/16/1079816.html
+++ b/VRChat/16/1079816.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "Ldmp8kRhRFlYn8mX28V4d1fb3Sar4r2PmgFTkQOiY/4="></script>
+    "t6/eLW9Cihb9PM9fNZ/JcXZGqKQG/agZzvt/WfHGGac="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スキットル","description":"『スキットル』\n\nVRchat用ですが特に用途の制限はないので\n下記を参考にご自由にお使いください。\n\nお酒とか入れて飲む。\n蓋にボーンが入ってるので開けたり閉めたりできる。\n\nFANBOX500円プラン「400円以下のもの使い放題」プランの対象商品となります。\n\n\tNormal.png : ノーマルマップです。ノーマルマップに対応したシェーダーに入れると質感が出ます。\n\tMetallicSmoothness.png : メタリックラフネスマップです。メタリックラフネスマップに対応したシェーダーに入れると質感が出ます。\n\n作者詐称：不可\n改変：可\n商用利用；可\n再配布：不可\nアバターやワールドへの同梱：可\n\n----------------------\n\n更新履歴\n\n2018/11/04 リリース\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1079816","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1079816/88848015-60d1-44ca-a804-65eb4d79ca5d_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ldmp8kRhRFlYn8mX28V4d1fb3Sar4r2PmgFTkQOiY/4="></script>
+    nonce="t6/eLW9Cihb9PM9fNZ/JcXZGqKQG/agZzvt/WfHGGac="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -151,7 +151,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               スキットル
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -187,6 +187,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -296,9 +298,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
