updated at: 2023-08-03 17:03, ビームライフル2 - Vacssのモデル置き場 - BOOTH

--- a/VRChat/97/1079497.html
+++ b/VRChat/97/1079497.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "0MpmX+btXkuY5YVRnMybpEIdIiFLQ712GjR7iZN2JxU="></script>
+    "4oW1WHIeJwfletfDuihNkB88it4ZbVvN62tX+KAvHk8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ビームライフル2","description":"・最新ver1.0\nVRChatでの使用を前提としたシンプルなビームライフルです。","url":"https://booth.pm/ja/items/1079497","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/cc50c8fb-eb74-476c-81ee-d0b5206aac82/i/1079497/a0229220-49f3-49c5-b4d1-24ea87016f24_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0MpmX+btXkuY5YVRnMybpEIdIiFLQ712GjR7iZN2JxU="></script>
+    nonce="4oW1WHIeJwfletfDuihNkB88it4ZbVvN62tX+KAvHk8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               ビームライフル2
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -297,9 +299,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
