updated at: 2023-08-03 17:04, XRG-2C - 消しゴムの筆箱 - BOOTH

--- a/VRChat/74/1078574.html
+++ b/VRChat/74/1078574.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "kmt6L7Szw6gVcr2CIHi+i1yUfkGBRSAPQ0ZLErHR95Q="></script>
+    "xVwsHZKIFIuLamdQkYlSJL1AYsP1IsyxsJuMWIdMWZ4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"XRG-2C","description":"XRG-2C","url":"https://booth.pm/ja/items/1078574","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/3713aef5-42d6-43d4-b456-e2fe144cfcc8/i/1078574/71f11515-7bb2-4ff6-b1a7-a89ef5ae49e4_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kmt6L7Szw6gVcr2CIHi+i1yUfkGBRSAPQ0ZLErHR95Q="></script>
+    nonce="xVwsHZKIFIuLamdQkYlSJL1AYsP1IsyxsJuMWIdMWZ4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -148,7 +148,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               XRG-2C
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -184,6 +184,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -293,9 +295,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
