updated at: 2023-08-03 17:05, 視野角変更シェーダー(Change FoV Shader)+おまけ5種 ver1.1 - virtual-boys - BOOTH

--- a/VRChat/74/1078474.html
+++ b/VRChat/74/1078474.html
@@ -80,9 +80,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "G35KQiXCaWk+OxgjbL9OjAiS12dyziBoCWyK4Wc7U5U="></script>
+    "7QxFS3eRg2KNYGxGdWhTWoSfQx6iRGE9PuiqV5WcSc8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"視野角変更シェーダー(Change FoV Shader)+おまけ5種 ver1.1","description":"このシェーダーを適用したメッシュ越しにみると視野角が変わったように見えるよ！視野角60度固定のVRカメラやデスクトップでのスクショもこのシェーダー越しに撮影すれば歪みを少なくできるよ！\n\nおまけで、法線可視化シェーダー、ワイヤーフレームシェーダー、メタリック化シェーダー、テクスチャ貼り付けシェーダー、カメラを使わない3Dスキャンシェーダーもついてるよ！\n\n節度をまもって他人の迷惑にならないように使ってね！","url":"https://booth.pm/ja/items/1078474","offers":{"priceCurrency":"JPY","@type":"Offer","price":"230"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1078474/d459232e-c53d-4cbc-9afd-9ca2a7a74901_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="G35KQiXCaWk+OxgjbL9OjAiS12dyziBoCWyK4Wc7U5U="></script>
+    nonce="7QxFS3eRg2KNYGxGdWhTWoSfQx6iRGE9PuiqV5WcSc8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -168,7 +168,7 @@
                               視野角変更シェーダー(Change FoV Shader)+おまけ5種
                               ver1.1
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -204,6 +204,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -313,9 +315,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
