updated at: 2023-08-03 17:05, オリジナル３Dモデル「Livaiathan Type.A」Ver1.0 +他3種 - 月面平城京 - BOOTH

--- a/VRChat/91/1078191.html
+++ b/VRChat/91/1078191.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "Ko/t8HibAOxH577ribjE/BfU0sOZFwzJzdx6EtqlbPc="></script>
+    "l/hrkDZTl/yVGmHDKdtyvUXum+TOQbEMn5GPQMtaj3o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル３Dモデル「Livaiathan Type.A」Ver1.0  +他3種","description":"超蔟式オリジナルモデル第2弾。\nLivaiathan。TypeA、TypeA-2、TypeDとその試作機を提供します。\n\nVRChat想定で制作されていますが配信、ゲームコンテンツなどに収益化状態を問わず運用可能です。\n\n試作機を覗いてVRCでのフルトラッキング確認済み。\n\n改変及び商用利用も可能。\n素体、パーツを他のアバターへ使用することも許可しています。\n\n\nモデル、テクスチャーの再配布、販売は改変の有無を問わず禁止です。\n特定個人や団体への中傷を目的とした利用も当然ながら禁止します。\n\n詳しくは後述の利用規約を参照。\n\n\n","url":"https://booth.pm/ja/items/1078191","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/64446b0b-9225-4dba-a979-4708b93cc2ef/i/1078191/29c4a6e7-18f0-49e9-84bf-ac017190df86_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ko/t8HibAOxH577ribjE/BfU0sOZFwzJzdx6EtqlbPc="></script>
+    nonce="l/hrkDZTl/yVGmHDKdtyvUXum+TOQbEMn5GPQMtaj3o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -154,7 +154,7 @@
                               オリジナル３Dモデル「Livaiathan Type.A」Ver1.0
                               +他3種
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -190,6 +190,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -299,9 +301,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
