updated at: 2023-08-03 17:05, 短刀「灰氷」 - シンヤの模造武具 - BOOTH

--- a/VRChat/14/1077614.html
+++ b/VRChat/14/1077614.html
@@ -102,9 +102,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "aUGPWK3tFFCkkUNPB3O9UEm5OABoAuqZEdPhjy2G/cY="></script>
+    "6rHfvvWh/u4GROJPfYP3V2lJDwjbJ5LUuNFh22pzdws="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"短刀「灰氷」","description":"VRChat向けの３D武器モデルデータです。\n北方の民族風の文様を施した短刀で、狩りの場面から儀式までなんでも使えます。\n\n△ポリゴン３４４と低ポリですが、こだわった刃紋のテクスチャなど見所がいっぱいです！\n\nver1.1\n鞘をUnityだけで表示非表示できない不具合を解消","url":"https://booth.pm/ja/items/1077614","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/9b92b4aa-727e-4ad3-8a66-111e77c11365/i/1077614/809a4bf0-4f82-481b-aa71-c2c2a881b997_base_resized.jpg"}
     </script>
@@ -115,7 +115,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="aUGPWK3tFFCkkUNPB3O9UEm5OABoAuqZEdPhjy2G/cY="></script>
+    nonce="6rHfvvWh/u4GROJPfYP3V2lJDwjbJ5LUuNFh22pzdws="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -173,7 +173,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               短刀「灰氷」
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -209,6 +209,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -318,9 +320,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
