updated at: 2023-08-03 17:06, オリジナル3Dモデル「ヤギコ」 - sasaminbooth - BOOTH

--- a/VRChat/55/1076755.html
+++ b/VRChat/55/1076755.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "XPgwZGpswi6HK4H7+NJFagnXHUc5cZM0d0bpaN7GKKY="></script>
+    "736gB07ZKXbMEJ4y40ua1MGFBAZUKW/Sk9NtjCVlaHU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル「ヤギコ」","description":"【お知らせ】\n購入者のうち一部の方がアップデートバージョンを受け取ることができない状態になっております。お手数ですが新しく追加した再購入用のバリエーションからDLをお願いします。内容は通常版と同一の状態です。\nまた、アバターを未購入の方も無料版からDLできますのでご自由にどうぞ。\n\n■モデル説明\n本モデルはHumanoid形式のオリジナル３Dモデル『ヤギコ』です。\nVRchatでの使用を想定しています。\n\n郵便屋さんのヤギの女の子です。\n\n\nフルボディトラッキングでの動作は確認しておりません\nLip Sync：20種（VRchat標準+MMD標準）\nシェイプキー（一部名称はMMD形式に倣っています）\nEyeTracking対応\nDynamic Bone対応（前髪、おさげ、耳、尻尾、スカート）\n","url":"https://booth.pm/ja/items/1076755","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/c0f46913-ee1e-4dbc-813f-7145553a5b74/i/1076755/8b006431-e494-4aaa-b59a-0b31ea77eb26_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XPgwZGpswi6HK4H7+NJFagnXHUc5cZM0d0bpaN7GKKY="></script>
+    nonce="736gB07ZKXbMEJ4y40ua1MGFBAZUKW/Sk9NtjCVlaHU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -153,7 +153,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               オリジナル3Dモデル「ヤギコ」
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -189,6 +189,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -350,9 +352,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
