updated at: 2023-08-03 17:06, サンタ帽 - ぱんやちゃんの - BOOTH

--- a/VRChat/12/1076512.html
+++ b/VRChat/12/1076512.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "++wNC06lLzCR6vMSnChbHOpotEkgizwyMkxGgXOfVos="></script>
+    "Qcq2YKummNlBKQEfy4WCx6EFrO1ztsgZ6c6D8kwziZw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"サンタ帽","description":"20分位で作ったサンタ帽\n\nクオリティ低め\n\nおすきにどうぞ～\n\n無料とブースト用の差は一切ありません","url":"https://booth.pm/ja/items/1076512","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/ddf3494d-9f44-4769-903e-58b0edd4032b/i/1076512/ac3c15de-d585-4558-a5e2-4860c7091765_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="++wNC06lLzCR6vMSnChbHOpotEkgizwyMkxGgXOfVos="></script>
+    nonce="Qcq2YKummNlBKQEfy4WCx6EFrO1ztsgZ6c6D8kwziZw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -151,7 +151,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               サンタ帽
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -187,6 +187,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -348,9 +350,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
