updated at: 2023-08-03 17:07, 【VRChat向け】白兵戦特化型ラーク - virtualgaroth - BOOTH

--- a/VRChat/84/1075584.html
+++ b/VRChat/84/1075584.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "4SMIlxdDWramLzypxGtSr7WnWPQNJFOFebRQJkqcIok="></script>
+    "7lODqmQ34QsoCjxTiz03Ik6MqP4P1AT2NS2ZqBYZs6s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】白兵戦特化型ラーク","description":"Vケット2 Future Terminal A　A上層15\nこの製品はオリジナルメカの3Dモデルです。\nunityのhumanoid形式に対応しています","url":"https://booth.pm/ja/items/1075584","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/3b675027-b6f1-46ed-a792-ba287fa9d0ce/i/1075584/802ed111-48e1-4d63-893c-3abc368a49d6_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4SMIlxdDWramLzypxGtSr7WnWPQNJFOFebRQJkqcIok="></script>
+    nonce="7lODqmQ34QsoCjxTiz03Ik6MqP4P1AT2NS2ZqBYZs6s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -166,7 +166,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【VRChat向け】白兵戦特化型ラーク
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -202,6 +202,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -311,9 +313,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
